<resources>
    <string name="app_name">ClassPlanner</string>
    <string name="classes_taken">Select Classes Taken</string>
    <string name="lower">Lower       Division</string>
    <string name="upper">Upper Division</string>
    <string name="TE">Technical Elective</string>
    <string name="honor">Honor</string>
    <string name="action_settings">Settings</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="title_activity_summary_">Summary_Activity</string>
    <string name="title_activity_calender_">Calender_Activity</string>
    <string name="ucsdCollege">UCSD College</string>
    <string name="selectClass">Select Class Taken</string>
    <string-array name="college_spinner">
        <item>ERC</item>
        <item>Marshall</item>
        <item>Muir</item>
        <item>Revelle</item>
        <item>Sixth</item>
        <item>Warren</item>
    </string-array>
    <string name="major">Majors</string>
    <string-array name="major_spinner">
        <item>Computer Science(B.S)</item>
    </string-array>
    <string name="year_begin">Year Begin</string>
    <string-array name="year_spinner">
        <item>2006</item>
        <item>2007</item>
        <item>2008</item>
        <item>2009</item>
        <item>2010</item>
        <item>2011</item>
        <item>2012</item>
        <item>2013</item>
        <item>2014</item>
        <item>2015</item>
    </string-array>
    <string name="fall">Fall</string>
    <string name="winter">Winter</string>
    <string name="spring">Spring</string>
    <string name="summer">Summer</string>
    <string name="addclass">Add Class</string>
</resources>