<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Spinner
            android:id="@+id/year_spinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:entries="@array/year_spinner"
            android:spinnerMode="dropdown"
            android:background="#FFFFFFFF"
            android:gravity="center_horizontal"
            android:layout_weight="0.2"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFFFF"
            android:background="#ebae23"
            android:layout_weight="0.25"
            android:layout_marginRight="3dp"
            android:text="@string/fall"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#ebae23"
            android:layout_weight="0.25"
            android:textColor="#FFFFFFFF"
            android:layout_marginRight="3dp"
            android:text="@string/winter"/>
        <Button
            android:layout_width="wrap_content"
            android:background="#ebae23"
            android:layout_height="wrap_content"
            android:layout_marginRight="3dp"
            android:textColor="#FFFFFFFF"
            android:layout_weight="0.25"
            android:text="@string/spring"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="3dp"
            android:textColor="#FFFFFFFF"
            android:layout_weight="0.25"
            android:background="#ebae23"
            android:text="@string/summer"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/addclass"
            android:layout_alignParentBottom="true"
            android:onClick="classesTaken"
            android:background="#016691"
            android:textColor="#FFFFFFFF"
            android:id="@+id/button" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_above="@+id/button"
            android:baselineAligned="false">

            <ListView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/quarterListView"
                android:layout_weight="1" />
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>
