<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ebae23"
        android:layout_marginBottom="10dp">
    <TextView
        android:id="@+id/college_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ucsdCollege"
        android:textSize="20dp"
        android:padding="10dp"
        android:gravity="center"
        android:background="#ebae23"
        android:textStyle="bold"
        android:textColor="#FFFFFFFF"
        />
    <Spinner
        android:id="@+id/college_spinner"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:entries="@array/college_spinner"
        android:spinnerMode="dropdown"
        android:background="#FFFFFFFF"
        android:gravity="center_horizontal"
        android:layout_below="@+id/college_header"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#016691"
        android:layout_marginBottom="10dp">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/major"
        android:id="@+id/major_header"
        android:textSize="20dp"
        android:padding="10dp"
        android:gravity="center"
        android:background="#016691"
        android:textStyle="bold"
        android:textColor="#FFFFFFFF"
        />

    <Spinner
        android:id="@+id/major_spinner"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:entries="@array/major_spinner"
        android:spinnerMode="dropdown"
        android:background="#FFFFFFFF"
        android:gravity="center_horizontal"
        android:layout_below="@+id/major_header"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ebae23"
        android:layout_marginBottom="10dp">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/year_begin"
        android:id="@+id/year_header"
        android:textSize="20dp"
        android:padding="10dp"
        android:gravity="center"
        android:background="#ebae23"
        android:textStyle="bold"
        android:textColor="#FFFFFFFF"/>


    <Spinner
        android:id="@+id/year_spinner"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:entries="@array/year_spinner"
        android:spinnerMode="dropdown"
        android:background="#FFFFFFFF"
        android:gravity="center_horizontal"
        android:layout_below="@+id/year_header"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"/>


    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="OK"
        android:id="@+id/finishFirstStep"
        android:layout_alignParentBottom="true"

        />
    </RelativeLayout>

</LinearLayout>
